# diabolo

./: LICENSE  README.md
bio_ik/src/: goal_types.cpp
diabolo_gazebo/: CMakeLists.txt  README.md  package.xml
diabolo_gazebo/config/: true.rviz
diabolo_gazebo/controller/: 2_bot_controllers.yaml
diabolo_gazebo/include/: gazebo_diaboloplugin.h
diabolo_gazebo/launch/: diabolo_gazebo.launch
diabolo_gazebo/msg/: DiaboloSimConfig.msg  DiaboloState.msg
diabolo_gazebo/scripts/: spawn_diabolo.py
diabolo_gazebo/src/: README.md  gazebo_diaboloplugin.cpp
diabolo_gazebo/urdf/: diabolo.urdf
diabolo_gazebo/worlds/: test_world.world
diabolo_learn/scripts/: test.py  todo.md
diabolo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
diabolo_moveit_config/config/: 2_bot_controllers.yaml  diabolo_base_scene.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml
diabolo_moveit_config/config_data/: IK_trilinear_interpolation_edge_calculator.xlsx  Interpolation_bound_coordinates.xlsx  README.md  edge_coordinates.csv  joint_angle_edge_values.csv  joint_angle_edge_values_in_order.csv  joint_angle_edge_values_in_order.xlsx  joint_angle_edge_values_in_order_with_coords.csv  joint_angle_edge_values_in_order_with_coords.xlsx
diabolo_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  diabolo_base_scene_moveit_controller_manager.launch.xml  diabolo_moveit_planning_execution.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  true.rviz  warehouse.launch
diabolo_play/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
diabolo_play/config/: default.pkl  diabolo_trajectory_viz.rviz  visualize.rviz
diabolo_play/experiments/: analytical_plugin_params.csv  nn_plugin_params.csv  optimized_plugin_params.csv
diabolo_play/experiments/recordings/2020-07-11_basic_physics/: linear_accel_stick_motion.csv  z_hop_1.csv
diabolo_play/experiments/recordings/2020-09-14_motion_extraction/: circular_accel_left_stick_motion.csv  circular_accel_right_stick_motion.csv  circular_accel_stick_motion.csv
diabolo_play/include/diabolo_play/: diabolo_motion_generator.h  diabolo_playback.h  helper_functions.h  stick_target_to_joint_target_converter.h
diabolo_play/launch/: baseline_controller.launch  rviz.launch
diabolo_play/msg/: DiaboloMotionSplineSeeds.msg
diabolo_play/notebooks/: Diabolo Data Extraction.ipynb
diabolo_play/notebooks/.ipynb_checkpoints/: Diabolo Data Extraction-checkpoint.ipynb
diabolo_play/scripts/: analyze_sim_data.py  check_robot_joint_change.py  collect_data.py  data_preparation_recalib.py  diabolo_observer.py  interactive_play.py  p_controller.py  playback_experiment.py  publish_2D_stick_sine_waves.py  publish_ik_interpolation_bounds.py  publish_stick_sinusoidal.py
diabolo_play/src/: diabolo_motion_generator.cpp  diabolo_playback.cpp  stick_target_to_joint_target_converter.cpp
diabolo_play/src/diabolo_play/: diabolo_state_recorder.py  motion_knot_points.py
diabolo_play/srv/: CreateRobotTrajectory.srv  CreateSticksTrajectory.srv  GetDiaboloState.srv  SetInitialStickPositions.srv  SimulateDiabolo.srv
diabolo_scene_description/: CMakeLists.txt  README.md  package.xml
diabolo_scene_description/config/: a_bot_controllers.yaml  b_bot_controllers.yaml
diabolo_scene_description/launch/: base_scene_upload.launch  connect_real_robots.launch  diabolo_bringup_cameras.launch  osx_arms_bringup.launch  osx_bringup_cameras.launch  record_rosbag.launch
diabolo_scene_description/meshes/: diabolo_axis.stl  diabolo_fixators.stl  diabolo_mount.stl  diabolo_mount_bottom.stl  diabolo_mount_top.stl  diabolo_shell.stl  (+1 more)
natnet_ros/: .codecov.yml  .travis.yml  LICENSE  Readme.md  ci.sh  ci_util.sh
natnet_ros/natnet_msgs/: CMakeLists.txt  Readme.md  package.xml
natnet_ros/natnet_msgs/msg/: MarkerList.msg
natnet_ros/natnet_ros/: CMakeLists.txt  Readme.md  package.xml  setup.py
natnet_ros/natnet_ros/scripts/: client
natnet_ros/natnet_ros/src/natnet_ros/: __init__.py
natnet_ros/natnet_ros/test/: client.test  client_publishtest.test  logging.test  logtest
natnet_ros/python_natnet/: CMakeLists.txt  Readme.md  package.xml  setup.py
natnet_ros/python_natnet/python_natnet/: .cookiecutterrc  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  appveyor.yml  pre-commit-hook  setup.cfg  setup.py  tox.ini
natnet_ros/python_natnet/python_natnet/docs/: conf.py  index.rst  spelling_wordlist.txt  usage.rst
natnet_ros/python_natnet/python_natnet/docs/reference/: index.rst  natnet.comms.rst  natnet.protocol.MocapFrameMessage.rst  natnet.protocol.ModelDefinitionsMessage.rst  natnet.protocol.common.rst  natnet.protocol.rst  natnet.rst
natnet_ros/python_natnet/python_natnet/junk/: dump.py  try_parsing_MocapFrame.py
natnet_ros/python_natnet/python_natnet/scripts/: natnet-client-demo.py
natnet_ros/python_natnet/python_natnet/src/natnet/: Server.py  __init__.py  __version__.py  comms.py  fakes.py  logging.py
natnet_ros/python_natnet/python_natnet/src/natnet/protocol/: ConnectMessage.py  DiscoveryMessage.py  EchoRequestMessage.py  EchoResponseMessage.py  MocapFrameMessage.py  ModelDefinitionsMessage.py  RequestModelDefinitionsMessage.py  ServerInfoMessage.py  __init__.py  common.py
natnet_ros/python_natnet/python_natnet/test_data/raw/: SampleClient_output.txt  traffic.pcapng
natnet_ros/python_natnet/python_natnet/tests/: requirements.txt  requirements27.txt  test_Client.py  test_ConnectMessage.py  test_DiscoveryMessage.py  test_EchoRequestMessage.py  test_EchoResponseMessage.py  test_MocapFrameMessage.py  test_ModelDefinitionsMessage.py  test_RequestModelDefinitionsMessage.py  test_Server.py  test_ServerInfoMessage.py  test_Version.py  test_fakes.py
(+9 files in other folders)
