<?xml version="1.0"?>
<package format="2">
  <name>natnet_msgs</name>
  <version>0.1.0</version>
  <description>Messages for natnet_ros</description>
  <maintainer email="matthew@matthewedwards.co.nz">Matthew Edwards</maintainer>
  <author email="matthew@matthewedwards.co.nz">Matthew Edwards</author>
  <license>BSD</license>
  <url type="website">https://github.com/mje-nz/natnet_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>

</package>
