<?xml version="1.0"?>
<package format="2">
  <name>natnet_ros</name>
  <version>0.2.1</version>
  <description>NatNet 3 driver</description>
  <maintainer email="matthew@matthewedwards.co.nz">Matthew Edwards</maintainer>
  <author email="matthew@matthewedwards.co.nz">Matthew Edwards</author>
  <license>BSD</license>
  <url type="website">https://github.com/mje-nz/natnet_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>python_natnet</depend>
  <depend>natnet_msgs</depend>
</package>
